--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -54,7 +54,7 @@ jobs:
       fail-fast: false
       max-parallel: 3
       matrix:
-        python-version: ["3.10"]
+        python-version: ["3.10","3.11","3.12"]
         package-name: 
           - geos-ats
           - geos-geomechanics
